feat(asyncapi): migrate AsyncAPI generation to Victools' schema generator
BREAKING CHANGE:

## AsyncAPI Generation

### New Json Schema Generator

The [current library](https://github.com/mbknor/mbknor-jackson-jsonSchema) used to create Json Schema has been replaced by [Victools Json Schema Generator](https://github.com/victools/jsonschema-generator).

Reasons:

- The old library is not maintained for 3 years.
- Spring migrated from Javax to Jakarta. Old dependencies to `javax.validation` in the library mess up the dependency tree.

This change comes with some noticeable impact:

- `javax.validation` annotations are not available anymore, `jakarta.validation` annotations can be used instead.
- Library specific annotations are not available anymore. In specific, the `JsonExamples` is gone. The new Schema Generator **only supports a single example** per field by using Swaggers `@Schema(example = "foo")`.

### Changed Java API for AsyncAPI generation

The `AsyncApiGenerator` is not a `@Component` anymore. Tests that generate AsyncAPI don't need a Spring Context now.
Instead of autowiring `AsyncApiGenerator` and calling `.builder()` of the instance, `AsyncApiGenerator.builder()` is now a public static method.

Classes to embed as Json Schema are not configured in the AsyncApiGenerator anymore.
They are referenced as `$ref: class://com.example.your.package.model.MessageClass` in the AsyncAPI template.
The `AsyncApiGenerator` will create the schema, embed it in `components/schemas` and update the `$ref`erence.

### Migration steps

- Convert your test to a plain unit test without Spring Context.
- Get the `AsyncApiGenerator` from the static `builder()` method.
- Remove Java code that adds model class. (This code does not compile anymore.)
- Add the classes as `$ref: class://<fully-qualified-class-name>` in the AsyncAPI template
- Run the test to update the AsyncAPI result. Technically it will describe the same API but there will be differences in the yaml structure due to